# the-code-builders

./: .gitignore  README.md  pyproject.toml
website/home/: admin.py  models.py  urls.py  views.py
website/home/migrations/: 0001_initial.py  0002_auto_20200910_0832.py  0003_auto_20200910_1130.py  0004_announcement.py  0005_announcement_created_on.py  0006_event_eventcategory.py  0007_auto_20200910_2329.py  0008_auto_20200915_1134.py  0008_eventcategory_index.py  0009_merge_20200915_1307.py  0010_auto_20200915_1449.py  0011_auto_20200915_2347.py  0012_auto_20200923_1204.py  0013_auto_20200923_1307.py
website/home/static/handler/: error.css
website/home/static/home/css/: announcement.css  style.css
website/home/static/sign_in/: function.js  style.css
website/home/templates/: 404.html
website/home/templates/auth/: reset_done.html  reset_link.html  reset_pass.html  set_pass.html
website/home/templates/home/: adminDashboard.html  announcements.html  base.html  contact-template.html  contact-us.html  dashboard.html  home.html  policies.html  privacyPolicy.html  profile.html  refundPolicy.html  team_dashboard.html  termsAndConditions.html
website/home/templates/sign_in/: sign.html
website/monetary/: apps.py  urls.py  views.py
website/monetary/templates/payments/: confirm_order.html  order_summary.html
website/website/: settings.py  urls.py
